# src/main/java/co/za/demo/bankaccountapplication/model/domain/WithdrawalDo.java
@@ -1,14 +1,17 @@
 package co.za.demo.bankaccountapplication.model.domain;
 
-import java.math.BigDecimal;
 import jakarta.validation.constraints.DecimalMin;
 import jakarta.validation.constraints.NotNull;
+import java.math.BigDecimal;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.hibernate.validator.constraints.Length;
 
+/**
+ * A class representing the domain object for a withdrawal operation.
+ */
 @Data
 @Builder
 @NoArgsConstructor
@@ -22,4 +25,9 @@ public class WithdrawalDo {
   @NotNull
   @DecimalMin("0")
   private BigDecimal amount;
+
+  // Optional fields for audit and logging purposes
+  private String accountName;
+  private String accountType;
+  private String customerId;
 }
