# src/main/java/co/za/demo/bankaccountapplication/model/dto/Problem.java
@@ -1,19 +1,4 @@
 package co.za.demo.bankaccountapplication.model.dto;
 
-import java.math.BigDecimal;
-import lombok.Data;
-
-@Data
-public class Problem {
-  private String type;
-
-  private String title;
-
-  private Integer status;
-
-  private String traceId;
-
-  private String detail;
-
-  private String instance;
-}
+// This file is replaced by generated code from OpenAPI spec
+// Run: ./gradlew openApiGenerate to generate new DTOs
